tests/ui/traits/normalize/copy-impl-cannot-normalize.stderr
error[E0277]: the trait bound `T: TraitFoo` is not satisfied
  --> $DIR/copy-impl-cannot-normalize.rs:22:18
   |
LL | impl<T> Copy for Foo<T> {}
   |                  ^^^^^^ the trait `TraitFoo` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `Clone`
  --> $DIR/copy-impl-cannot-normalize.rs:12:9
   |
LL | impl<T> Clone for Foo<T>
   |         ^^^^^     ^^^^^^
LL | where
LL |     T: TraitFoo,
   |        -------- unsatisfied trait bound introduced here
note: required by a bound in `Copy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
help: consider restricting type parameter `T` with trait `TraitFoo`
   |
LL | impl<T: TraitFoo> Copy for Foo<T> {}
   |       ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
